Commit finale, terminata l'implementazione di tutti gli Algoritmi.