@@ -1,14 +1,12 @@
 package asd;
 
-import asd.AF.AbstractAF;
 import asd.AF.AbstractArgumentationFramework;
 import asd.AF.ArgumentationFramework;
 import asd.AF.IncompleteAbstractArgumentationFramework;
-import asd.Argument.AbstractArgument;
 import asd.Argument.Argument;
-import asd.Argument.IncompleteArgument;
 import asd.Argument.Relation;
 
+import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
 
@@ -22,10 +20,10 @@ public class SupportFunctions {
      * @param AF
      * @return true se l'argomenti è accettabile
      */
-    public static boolean acceptable(AbstractArgument a, List<AbstractArgument> S, ArgumentationFramework AF){
-        List<AbstractArgument> A = AF.getArguments();
+    public static boolean acceptable(Argument a, List<Argument> S, ArgumentationFramework AF){
+        List<Argument> A = AF.getArguments();
         List<Relation> R = AF.getRelations();
-        for(AbstractArgument b : A){
+        for(Argument b : A){
             Relation r = new Relation(b,a);
             if(R.contains(r))
                 if(! Sattacksb(S, b, R))
@@ -44,8 +42,8 @@ public class SupportFunctions {
      * @param R
      * @return true se S R a
      */
-    private static boolean Sattacksb(List<AbstractArgument> S, AbstractArgument b, List<Relation> R){
-        for(AbstractArgument s : S){
+    private static boolean Sattacksb(List<Argument> S, Argument b, List<Relation> R){
+        for(Argument s : S){
             Relation r = new Relation(s, b);
             if(R.contains(r))
                 return true;
@@ -61,10 +59,10 @@ public class SupportFunctions {
      * @param S
      * @return
      */
-    public static boolean conflictFree(ArgumentationFramework AF, List<AbstractArgument> S){
+    public static boolean conflictFree(ArgumentationFramework AF, List<Argument> S){
         List<Relation> R = AF.getRelations();
-        for(AbstractArgument a : S){
-            for(AbstractArgument b : S){
+        for(Argument a : S){
+            for(Argument b : S){
                 Relation r = new Relation(a,b);
                 if(R.contains(r))
                     return false;
@@ -80,9 +78,9 @@ public class SupportFunctions {
      * @param S
      * @return
      */
-    public static boolean admissible(ArgumentationFramework AF, List<AbstractArgument> S){
+    public static boolean admissible(ArgumentationFramework AF, List<Argument> S){
         if(conflictFree(AF,S)){
-            for(AbstractArgument a : S){
+            for(Argument a : S){
                 if(! acceptable(a,S,AF))
                     return false;
             }
@@ -94,16 +92,16 @@ public class SupportFunctions {
 
 
     /**
-     * L'argoritmo verifica se S è una complete extension w.r.t AF, ovvero se è ammissibile  e tutti contiene tutti
+     * L'argoritmo verifica se S è una complete extension w.r.t AF, ovvero se è ammissibile e contiene tutti
      * gli argomenti accettabili in A
      * @param AF
      * @param S
      * @return true se S è una complete extension
      */
-    public static boolean completeExtension(ArgumentationFramework AF, List<AbstractArgument> S){
+    public static boolean completeExtension(ArgumentationFramework AF, List<Argument> S){
         if(admissible(AF, S)){
-            List<AbstractArgument> A = AF.getArguments();
-            for(AbstractArgument a : A){
+            List<Argument> A = AF.getArguments();
+            for(Argument a : A){
                 if(acceptable(a,S,AF)){
                     if(!S.contains(a))
                         return false;
@@ -115,70 +113,118 @@ public class SupportFunctions {
     }
 
     /**
-     * Il metodo verifica se l'argomento a è un core argument seguendo una versione rilassata dell'algoritmo che
-     * non valuta le c-expansion
+     * Il metodo verifica se l'argomento a è un core argument. O meglio dato un possibile core-argument
+     * verifica l'esistenza di almeno una c-expansion di quell'argomento
+     * se questa ricerca da esito positivo allora restituice true. Cerca la c-expansion più
+     * piccola per poter verificare la proprietà.
      * @param a
      * @param IF è di tipo (A,A?, D, D?)
      * @param F, è di tipo (A*, D*)
      * @param S
      * @return true se l'argomento a è un core argument
      */
-    public static boolean coreArgument(AbstractArgument a, IncompleteAbstractArgumentationFramework IF, AbstractArgumentationFramework F, List<AbstractArgument> S){
-        LinkedList<AbstractArgument> cEx = new LinkedList<>();
-        List<AbstractArgument> visitati = new LinkedList<>();
+    public static boolean coreArgument(Argument a, IncompleteAbstractArgumentationFramework IF, AbstractArgumentationFramework F, List<Argument> S){
+        ArrayList<Argument> cEx = new ArrayList<>();
+        List<Argument> visitati = new LinkedList<>();
         return coreArgument(a,cEx, visitati, IF, F,S);
     }
 
-    private static boolean coreArgument(AbstractArgument a , LinkedList<AbstractArgument> cEx, List<AbstractArgument> visitati,  IncompleteAbstractArgumentationFramework IF, AbstractArgumentationFramework F, List<AbstractArgument> S){
-        if(! (F.getArguments().contains(a) && ! S.contains(a)))return false; // ! a appartiene ad A*/S
-        cEx.add(a);
+    /**
+     *
+     * @param a
+     * @param cEx, c-expansion corrente
+     * @param visitati
+     * @param IF
+     * @param F
+     * @param S
+     * @return
+     */
+    private static boolean coreArgument(Argument a , ArrayList<Argument> cEx, List<Argument> visitati, IncompleteAbstractArgumentationFramework IF, AbstractArgumentationFramework F, List<Argument> S){
         visitati.add(a);
-        //controllo 2
-        for(AbstractArgument b : S){
+        cEx.add(a);
+
+        if(! (F.getArguments().contains(a) && ! S.contains(a)))return false; // ! a appartiene ad A*/S
+        //controllo 2, lo faccio una volta sola per ogni nuovo elemento aggiunto
+        for(Argument b : S){
             Relation r1 = new Relation(a,b);Relation r2 = new Relation(b,a);
             if((F.getRelations().contains(r1) && IF.getCertainRelations().contains(r1) ||
-                    (F.getRelations().contains(r2) && IF.getCertainRelations().contains(r2))))
-                    return false;
+                    (F.getRelations().contains(r2) && IF.getCertainRelations().contains(r2)))) {
+                return false;
+            }
 
         }//for
-        if(cEx.size() > 0){
-            for(int  i = 1; i <cEx.size(); i++){
-                Relation r = new Relation(cEx.get(i), cEx.get(i -1));
-                if(! F.getRelations().contains(r))
-                    return false;
-            }//for
+        if(cEx.size() > 1){
+            int i = cEx.size()-1;
+            Relation r = new Relation(cEx.get(i), cEx.get(i -1));
+            if(! F.getRelations().contains(r)) {
+                return false;
+            }
         }//if
 
-        for(AbstractArgument j : cEx){
-            Relation r = new Relation(j, cEx.getLast());
+
+        for(Argument j : cEx){
+            Relation r = new Relation(j, cEx.get(cEx.size()-1));//cEx.getLast()
             if(F.getRelations().contains(r))
                 return true;
         }//for
-        List<AbstractArgument> adiacenti = adiacenti(a,IF);
-        for(AbstractArgument ad : adiacenti){
-            if(! visitati.contains(ad))
-                return coreArgument(ad, cEx, visitati,IF,F,S);
-        }
+
+
+        /*
+        Se soddifo l'ultima condizione, ciò implica che ho verificato le quattro condizioni e possso fermarmi
+         */
+        List<Argument> adiacenti = adiacenti(a,IF);
+        if(adiacenti.size() > 0) {
+            //verifico se ci sono nodi adicenti
+            for (Argument ad : adiacenti) {
+                if (!visitati.contains(ad)) {
+                    if (coreArgument(ad, cEx, visitati, IF, F, S)) {
+                        return true;
+                    }
+                    cEx.remove(cEx.size() -1 );//rimuovo l'ultimo elelemento aggiunto che poi è l'adiacente che sto considerando.
+                }
+            }//for
+        }//non ci sono nodi adiacenti, alimino l'ultimo inserito e vado avanti
         return false; //return fittizia
     }//coreArgument
 
-    private static List<AbstractArgument> adiacenti(AbstractArgument a, IncompleteAbstractArgumentationFramework IF){
-        List<AbstractArgument> ret = new LinkedList<>();
-        for(AbstractArgument b : IF.getArguments()){
-            Relation r = new Relation(a,b);
-            if(IF.getRelations().contains(r))//
+    private static List<Argument> adiacenti(Argument a, IncompleteAbstractArgumentationFramework IF){
+        List<Argument> ret = new LinkedList<>();
+        for(Argument b : IF.getArguments()){
+            Relation r = new Relation(a,b);Relation r1 = new Relation(b,a);
+            if(IF.getRelations().contains(r) || IF.getRelations().contains(r1))//
                 ret.add(b);
         }
         return  ret;
     }
 
-    public static List<AbstractArgument> CORE(IncompleteAbstractArgumentationFramework IF, AbstractArgumentationFramework F, List<AbstractArgument> S){
-        List<AbstractArgument> ret = new LinkedList<>();
-        for(AbstractArgument a : F.getArguments()) {
-            if (coreArgument(a, IF, F, S))
+    /**
+     * Il metodo restituisce l'insieme di core-argument w.r.t IF, F, S.
+     * @param IF
+     * @param F
+     * @param S
+     * @return
+     */
+    public static List<Argument> CORE(IncompleteAbstractArgumentationFramework IF, AbstractArgumentationFramework F, List<Argument> S){
+        if(! isCompletionOf(IF,F)) return null;
+        List<Argument> ret = new LinkedList<>();
+        for(Argument a : F.getArguments()) {
+            if (coreArgument(a, IF, F, S) && ! ret.contains(a))
                 ret.add(a);
         }
         return ret;
+    }
+
+    /**
+     * Il metodo verifica se l'abstract argumentation framework F è una completions dell'incomplete abstract argumentation framework iAAF
+     * @param iAAF, incomplete abstract arguementation framework
+     * @param F, abstract argumentation framework
+     * @return, true se F è una completions di iAAF
+     */
+    private static boolean isCompletionOf(IncompleteAbstractArgumentationFramework iAAF, AbstractArgumentationFramework F){
+        if(iAAF.getArguments().containsAll(F.getArguments()) && iAAF.getRelations().containsAll(F.getRelations()))
+            return true;
+        return false;
+
     }
 
 
